# rooster-cogburn

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  mkdocs.yml  playground.ipynb  pyproject.toml
.devcontainer/: devcontainer.json
.github/: container-structure-tests.yaml
.github/.devcontainer/: devcontainer.json
.github/workflows/: dev-image.yaml  docs.yaml  prerelease.yaml  release.yaml
docs/: index.md
docs/assignments/: hw1.md  index.md
docs/background/: index.md
docs/background/dataops/: 0-devops.md  1-dataops.md  2-reproducible-envs.md  3-glossary.md  4-git-strategy.md  git-strategy.md  index.md
docs/background/querying-data/: example_pandas_query.md  sql-vs-pandas.md
docs/dataops/: dataops.md  env-challenges.md  env-setup.md  git-strategy.md  glossary.md
docs/exercises/: env-setup.md
docs/exercises/group-project/: getting-started.md
