[tool.poetry]
name = "fl23"
version = "0.1.0"
description = ""
authors = ["Ty Schlichenmeyer <ty.schlich@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.0"
markdown-captions = "^2.1.2"
python-semantic-release = "^8.0.8"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff]
fix = true
select = ["ALL"]
ignore = ["D100", "D104"]
per-file-ignores = { "tests/**/*.py" = [
    "S101",
    "D100",
    "D103",
    "ANN201",
    "ANN001",
    "INP001",
] }

[tool.ruff.pydocstyle]
convention = "google"

[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]

[tool.semantic_release.branches.prerelease]
match = "prerelease"
prerelease = true
